<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical"
    >

    <com.example.kreaprint.components.CustomBackToolbar
        android:id="@+id/customBackToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/circle_dashed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="130dp"
        android:translationX="50dp"
        android:translationY="0dp"/>

    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_dashed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="40dp"
        android:translationX="150dp"
        android:translationY="0dp"/>

    <View
        android:id="@+id/circle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circle"
        android:translationX="-40dp"
        android:translationY="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customBackToolbar">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_title"
            android:text="@string/text_cp_heading"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:maxHeight="10dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/cp_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border_edittext"
                android:hint="@string/text_current_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="#BDBDBD" />
            <ImageView
                android:id="@+id/iv_cp_current_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="Toggle Password Visibility"
                app:srcCompat="@drawable/eye_closed" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/cp_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border_edittext"
                android:hint="@string/text_new_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="#BDBDBD" />

            <ImageView
                android:id="@+id/iv_cp_new_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="Toggle Password Visibility"
                app:srcCompat="@drawable/eye_closed" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <EditText
                android:id="@+id/cp_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border_edittext"
                android:hint="@string/text_confirm_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="#BDBDBD" />

            <ImageView
                android:id="@+id/iv_cp_confirm_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="Toggle Password Visibility"
                app:srcCompat="@drawable/eye_closed" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <Button
                android:id="@+id/btn_cp"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/btn_text_cp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
